--- a/docs/event-catalog/daily.data.workout_stream.created.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.created.mdx
@@ -9,38 +9,33 @@ Each summary object is uniquely identified by its `id`.
 If multiple events are received at the same `id`, the last event received replaces all its previous
 versions.
 </Warning>
-<ResponseField name="event_type" type="const string" required="True">
-`daily.data.workout_stream.created`
+<ResponseField name="event_type" type="const string" required="true">
+Constant: `daily.data.workout_stream.created`
 </ResponseField>
-<ResponseField name="data" type="ClientFacingShallowWorkoutStream">
-
+<ResponseField name="data" type="ClientFacingShallowWorkoutStream" required="true">
 <Expandable title="ClientFacingShallowWorkoutStream" defaultOpen="true">
-<ResponseField name="user_id" type="string" required="True">
+<ResponseField name="user_id" type="string" required="true">
 User id returned by vital create user request. This id should be stored in your database against the user and used for all interactions with the vital api.
 </ResponseField>
-<ResponseField name="user_key" type="string | null" required="False">
-[⚠️ Deprecated]
-User key returned by vital create user key request. This key should be stored in your database against the user and used for all interactions with the vital api.
+<ResponseField name="user_key" type="string | null">
+[⚠️ Deprecated] User key returned by vital create user key request. This key should be stored in your database against the user and used for all interactions with the vital api.
 </ResponseField>
-<ResponseField name="workout_id" type="string" required="True">
-
+<ResponseField name="workout_id" type="string" required="true">
 </ResponseField>
-<ResponseField name="provider_id" type="string" required="True">
-
+<ResponseField name="provider_id" type="string" required="true">
 </ResponseField>
-<ResponseField name="message" type="string | null" required="False" default="Due to payload size limits, to access the workout stream,          please use the /v2/timeseries/workouts/{workout_id}/stream endpoint.">
-
+<ResponseField name="message" type="string | null">
 </ResponseField>
-<ResponseField name="source" type="ClientFacingSource">
+<ResponseField name="source" type="ClientFacingSource" required="true">
 Source the data has come from.
 <Expandable title="ClientFacingSource" defaultOpen="true">
-<ResponseField name="name" type="string" required="True">
+<ResponseField name="name" type="string" required="true">
 Name of source of information
 </ResponseField>
-<ResponseField name="slug" type="string" required="True">
+<ResponseField name="slug" type="string" required="true">
 Slug for designated source
 </ResponseField>
-<ResponseField name="logo" type="string" required="True">
+<ResponseField name="logo" type="string" required="true">
 URL for source logo
 </ResponseField>
 </Expandable>
@@ -48,13 +43,12 @@ URL for source logo
 <ResponseField name="sport" type="ClientFacingSport | null">
 Sport&#x27;s name
 <Expandable title="ClientFacingSport" defaultOpen="true">
-<ResponseField name="id" type="integer" required="True">
-
+<ResponseField name="id" type="integer" required="true">
 </ResponseField>
-<ResponseField name="name" type="string" required="True">
+<ResponseField name="name" type="string" required="true">
 Sport&#x27;s name
 </ResponseField>
-<ResponseField name="slug" type="string" required="True">
+<ResponseField name="slug" type="string" required="true">
 Slug for designated sport
 </ResponseField>
 </Expandable>
@@ -66,7 +60,7 @@ Slug for designated sport
 {
   "event_type": "daily.data.workout_stream.created",
   "data": {
-    "workout_id": "0a8c4ead-d776-4462-ae47-cc2adfbc6408",
+    "workout_id": "0e3d227c-0308-434b-b117-b8a873544d7c",
     "provider_id": "123dashd9",
     "message": "Due to payload size limits, to access the workout stream, please use the /v2/timeseries/workouts/{workout_id}/stream endpoint.",
     "source": {
